Tweak the design

--- a/src/main/resources/public/register/form.html
+++ b/src/main/resources/public/register/form.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="ABCTech's registration system">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Majoingun</title>
+    <title>ABC TECH Registration page</title>
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -54,7 +54,7 @@
                     <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
                     <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
                         <div class="demo-crumbs mdl-color-text--grey-500 header-area">
-                            <h3><i class="material-icons">person_pin</i> Welcome to <span>Register</span></h3>
+                            <h3><i class="material-icons">person_pin</i> Welcome to <span>Our registration page</span></h3>
 
                         </div>
                         <div id="registerform" class="content-area"></div>
@@ -142,10 +142,10 @@
                     <div class="mdl-select mdl-js-select mdl-select--floating-label">
                         <select class="mdl-select__input" id="year" value="{{prospect.year}}">
                             <option value=" " selected>Student Year</option>
-                            <option value="freshman">Freshman</option>
-                            <option value="sophomore">Sophomore</option>
-                            <option value="junior">Junior</option>
-                            <option value="senior">Senior</option>
+                            <option value="freshman">Freshman - 1st year</option>
+                            <option value="sophomore">Sophomore - 2nd year</option>
+                            <option value="junior">Junior - 3rd year</option>
+                            <option value="senior">Senior - 4th year and more</option>
                             <option value="graduated">Graduated</option>
                         </select>
                     </div>
@@ -198,11 +198,11 @@
             <div class="mdl-grid">
                 <div class="mdl-cell mdl-cell--12-col footer-form">
                     <button type="submit"
-                            class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent mdl-cell--12-col-phone">
+                            class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent mdl-cell--12-col-phone" style="float: left;">
                         Register
                     </button>
                     <button type="reset" id="clearBtn"
-                            class="mdl-button mdl-js-button mdl-cell--12-col-phone">
+                            class="mdl-button mdl-js-button mdl-cell--12-col-phone" style="float: right;">
                         Discard
                     </button>
                 </div>
