--- a/src/main/resources/public/register/form.html
+++ b/src/main/resources/public/register/form.html
@@ -54,7 +54,7 @@
                     <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
                     <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
                         <div class="demo-crumbs mdl-color-text--grey-500 header-area">
-                            <h3><i class="material-icons">person_pin</i> Welcome to <span>Our registration page</span></h3>
+                            <h3><i class="material-icons">person_pin</i> Welcome to <span>ABC Tech Registration Page</span></h3>
 
                         </div>
                         <div id="registerform" class="content-area"></div>
