Put required field text

--- a/src/main/resources/public/register/form.html
+++ b/src/main/resources/public/register/form.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="ABCTech's registration system">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
     <title>ABC TECH Registration page</title>
 
     <!-- Add to homescreen for Chrome on Android -->
@@ -55,7 +56,6 @@
                     <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
                         <div class="demo-crumbs mdl-color-text--grey-500 header-area">
                             <h3><i class="material-icons">person_pin</i> Welcome to <span>ABC Tech Registration Page</span></h3>
-
                         </div>
                         <div id="registerform" class="content-area"></div>
                     </div>
@@ -108,7 +108,6 @@
                     </div>
                 </div>
             </div>
-
 
             <div class="mdl-grid">
                 <div class="mdl-cell mdl-cell--6-col">
@@ -194,6 +193,10 @@
                         </label>
                     </div>
                 </div>
+            </div>
+
+            <div class="mdl-grid">
+                <p class="sub-title">(All fields are required.)</p>
             </div>
             <div class="mdl-grid">
                 <div class="mdl-cell mdl-cell--12-col footer-form">
